Make header sticky so you can read it when you scroll down

--- a/stats.html.j2
+++ b/stats.html.j2
@@ -13,6 +13,12 @@
             font-family: "Raleway", sans-serif;
             background-color: #FEFEFE;
         }
+        
+        thead {
+            position: sticky;
+            top: 0;
+            background-color: white;
+        }
 
         table, td, tr {
             border-spacing: 0;
