Prevent line wrapping in header

--- a/stats.html.j2
+++ b/stats.html.j2
@@ -20,6 +20,10 @@
             background-color: white;
         }
 
+        th {
+            white-space: nowrap;
+        }
+
         table, td, tr {
             border-spacing: 0;
         }
