--- a/stats.html.j2
+++ b/stats.html.j2
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700"
           rel="stylesheet" type="text/css">
-    <meta http-equiv="refresh" content="20"/>
     <style>
         body {
             color: #212121;
@@ -55,6 +54,7 @@
             <tr>
                 <th rowspan="2">#</th>
                 <th rowspan="2">Ping server</th>
+                <th rowspan="2">Geom. mean</th>
                 <th rowspan="2">Median</th>
                 <th rowspan="2">Mean</th>
                 <th rowspan="2">N</th>
@@ -71,6 +71,7 @@
                 <tr>
                     <th>{{ ping_server_data.n }}</th>
                     <th>{{ server }}</th>
+                    <td>{{ prettify_diff(ping_server_data.gmean) }}</td>
                     <td>{{ prettify_diff(ping_server_data.median) }}</td>
                     <td>{{ prettify_diff(ping_server_data.mean) }}</td>
                     <td>{{ ping_server_data.pings|length }}</td>
